{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 269,
  "lineage": "e9efbb75-4155-e4a9-4151-490248e49b9c",
  "resources": [
    {
      "module": "module.ec2_app",
      "mode": "managed",
      "type": "aws_eip",
      "name": "cloudcasts_addr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e43297afee06ad6",
            "domain": "vpc",
            "id": "eipalloc-07e43297afee06ad6",
            "network_border_group": "cn-northwest-1",
            "public_dns": "ec2-69-231-184-67.cn-northwest-1.compute.amazonaws.com.cn",
            "public_ip": "69.231.184.67",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-web",
              "Project": "cloudcasts.io",
              "Role": "web"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-web",
              "Project": "cloudcasts.io",
              "Role": "web"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ec2_app.module.ec2-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0438d80ac116a1415",
            "arn": "arn:aws-cn:ec2:cn-northwest-1:353880636441:instance/i-093ddb7465137567c",
            "associate_public_ip_address": false,
            "availability_zone": "cn-northwest-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-093ddb7465137567c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0243691b8027e61c7",
            "private_dns": "ip-10-0-13-58.cn-northwest-1.compute.internal",
            "private_ip": "10.0.13.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0481fc63031f703ea",
                "volume_size": 12,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c1dbb076bf720f0c",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-web",
              "Project": "cloudcasts.io",
              "Role": "web"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-web",
              "Project": "cloudcasts.io",
              "Role": "web"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "cloudcasts-staging"
            },
            "vpc_security_group_ids": [
              "sg-05c3d57a9ecee464d"
            ]
          },
          "dependencies": [
            "data.aws_ami.cloudcasts_web",
            "module.ec2_app.random_shuffle.subnets",
            "module.vpc.aws_security_group.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_worker.module.ec2-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0438d80ac116a1415",
            "arn": "arn:aws-cn:ec2:cn-northwest-1:353880636441:instance/i-02f6f1cb89613932a",
            "associate_public_ip_address": false,
            "availability_zone": "cn-northwest-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02f6f1cb89613932a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-076081466d0dcbc1e",
            "private_dns": "ip-10-0-21-198.cn-northwest-1.compute.internal",
            "private_ip": "10.0.21.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-093dfeeb07f9d948b",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05b5e1940a8b1a39e",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-worker",
              "Project": "cloudcasts.io",
              "Role": "worker"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-worker",
              "Project": "cloudcasts.io",
              "Role": "worker"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "cloudcasts-staging"
            },
            "vpc_security_group_ids": [
              "sg-05c3d57a9ecee464d"
            ]
          },
          "dependencies": [
            "data.aws_ami.cloudcasts_web",
            "module.ec2_worker.random_shuffle.subnets",
            "module.vpc.aws_security_group.public",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:353880636441:security-group/sg-071b1eaa015cf26dc",
            "description": "Private internet access",
            "egress": [],
            "id": "sg-071b1eaa015cf26dc",
            "ingress": [],
            "name": "cloudcasts-staging-private-sg",
            "name_prefix": "",
            "owner_id": "353880636441",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-private-sg",
              "Project": "cloudcasts.io",
              "Role": "private"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-private-sg",
              "Project": "cloudcasts.io",
              "Role": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-07df30c39b2357ded"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:353880636441:security-group/sg-05c3d57a9ecee464d",
            "description": "Public internet access",
            "egress": [],
            "id": "sg-05c3d57a9ecee464d",
            "ingress": [],
            "name": "cloudcasts-staging-public-sg",
            "name_prefix": "",
            "owner_id": "353880636441",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-public-sg",
              "Project": "cloudcasts.io",
              "Role": "public"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-public-sg",
              "Project": "cloudcasts.io",
              "Role": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-07df30c39b2357ded"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "privat_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2433535918",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-071b1eaa015cf26dc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.private",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/17"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3694740282",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-071b1eaa015cf26dc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.private",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_in_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1156127628",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05c3d57a9ecee464d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.public",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_in_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-3144693936",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05c3d57a9ecee464d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.public",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_in_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-4066592313",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05c3d57a9ecee464d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.public",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3035466688",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05c3d57a9ecee464d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.public",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f61cec59fad891ea",
            "domain": "vpc",
            "id": "eipalloc-0f61cec59fad891ea",
            "network_border_group": "cn-northwest-1",
            "public_dns": "ec2-52-83-251-109.cn-northwest-1.compute.amazonaws.com.cn",
            "public_ip": "52.83.251.109",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-vpc",
              "Project": "cloudcasts.io"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-vpc",
              "Project": "cloudcasts.io"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:353880636441:internet-gateway/igw-048fc8b915ecc9c03",
            "id": "igw-048fc8b915ecc9c03",
            "owner_id": "353880636441",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-vpc",
              "Project": "cloudcasts.io"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-vpc",
              "Project": "cloudcasts.io"
            },
            "vpc_id": "vpc-07df30c39b2357ded"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f61cec59fad891ea",
            "connectivity_type": "public",
            "id": "nat-0b82ce9910377990d",
            "network_interface_id": "eni-00b79dcf3b3f8c2c7",
            "private_ip": "10.0.6.235",
            "public_ip": "52.83.251.109",
            "subnet_id": "subnet-0e2a1083edd8ab3e2",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-vpc",
              "Project": "cloudcasts.io"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-vpc",
              "Project": "cloudcasts.io"
            }
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-006fe60316502df691080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b82ce9910377990d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-006fe60316502df69",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-048fc8b915ecc9c03",
            "id": "r-rtb-0113ea989be00d71d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0113ea989be00d71d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:353880636441:route-table/rtb-006fe60316502df69",
            "id": "rtb-006fe60316502df69",
            "owner_id": "353880636441",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-vpc",
              "Project": "cloudcasts.io"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-vpc",
              "Project": "cloudcasts.io"
            },
            "timeouts": null,
            "vpc_id": "vpc-07df30c39b2357ded"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:353880636441:route-table/rtb-0113ea989be00d71d",
            "id": "rtb-0113ea989be00d71d",
            "owner_id": "353880636441",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-vpc",
              "Project": "cloudcasts.io"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-vpc",
              "Project": "cloudcasts.io"
            },
            "timeouts": null,
            "vpc_id": "vpc-07df30c39b2357ded"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b44842747054c6e",
            "route_table_id": "rtb-006fe60316502df69",
            "subnet_id": "subnet-05b5e1940a8b1a39e"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062c28cceaa264ea0",
            "route_table_id": "rtb-006fe60316502df69",
            "subnet_id": "subnet-09c2651b98392cf35"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fe30f3fc3991451",
            "route_table_id": "rtb-0113ea989be00d71d",
            "subnet_id": "subnet-0e2a1083edd8ab3e2"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088dcba9edf23f441",
            "route_table_id": "rtb-0113ea989be00d71d",
            "subnet_id": "subnet-0c1dbb076bf720f0c"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:353880636441:subnet/subnet-05b5e1940a8b1a39e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-northwest-1a",
            "availability_zone_id": "cnnw1-az1",
            "cidr_block": "10.0.16.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b5e1940a8b1a39e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353880636441",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-vpc",
              "Project": "cloudcasts.io"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-vpc",
              "Project": "cloudcasts.io"
            },
            "vpc_id": "vpc-07df30c39b2357ded"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:353880636441:subnet/subnet-09c2651b98392cf35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-northwest-1b",
            "availability_zone_id": "cnnw1-az2",
            "cidr_block": "10.0.24.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c2651b98392cf35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353880636441",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-vpc",
              "Project": "cloudcasts.io"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-vpc",
              "Project": "cloudcasts.io"
            },
            "vpc_id": "vpc-07df30c39b2357ded"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:353880636441:subnet/subnet-0e2a1083edd8ab3e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-northwest-1a",
            "availability_zone_id": "cnnw1-az1",
            "cidr_block": "10.0.0.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2a1083edd8ab3e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "353880636441",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-vpc",
              "Project": "cloudcasts.io"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-vpc",
              "Project": "cloudcasts.io"
            },
            "vpc_id": "vpc-07df30c39b2357ded"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:353880636441:subnet/subnet-0c1dbb076bf720f0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-northwest-1b",
            "availability_zone_id": "cnnw1-az2",
            "cidr_block": "10.0.8.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1dbb076bf720f0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "353880636441",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-vpc",
              "Project": "cloudcasts.io"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-vpc",
              "Project": "cloudcasts.io"
            },
            "vpc_id": "vpc-07df30c39b2357ded"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:353880636441:vpc/vpc-07df30c39b2357ded",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/17",
            "default_network_acl_id": "acl-0a3b75062f0ea3d1f",
            "default_route_table_id": "rtb-08384d70a24f4ac60",
            "default_security_group_id": "sg-0bd1d93e12b9fca39",
            "dhcp_options_id": "dopt-b4a32ddd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07df30c39b2357ded",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08384d70a24f4ac60",
            "owner_id": "353880636441",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-vpc",
              "Project": "cloudcasts.io"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "cloudcasts-staging-vpc",
              "Project": "cloudcasts.io"
            }
          }
        }
      ]
    }
  ]
}